examples/type_system/failing/164_match_unresolved_arm_stays_suppressed.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn main() -> Unit {
    let x = mystery_value
    let _y = match true {
        true -> 1,
        false -> x,
    }
}
